serialization/aut: use semantically correct assertEquals order